# FITS-file-C-library

./: CMakeLists.txt  README.md
Ifits/: Ifits.h
TestBoostAsio/: CMakeLists.txt  TestBoostAsio.cpp  TestBoostAsio.h
lib/: CMakeLists.txt  pch.hpp
lib/ifits/: CMakeLists.txt
lib/ifits/include/: hdu.hpp  ifits.hpp  pch.hpp
lib/ifits/include/details/: search.hpp
lib/include/: ofits.hpp
lib/ofits/: CMakeLists.txt  pch.hpp
lib/ofits/include/: ofits.hpp
lib/test/: CMakeLists.txt  ifits.cpp  test.cpp
lib/tests/: CMakeLists.txt  test.cpp  test_ifits.cpp  test_ofits.cpp
lib/tests/data/: double_hdu.fits  double_hdu_data.fits  single_hdu.fits
tests/: CMakeLists.txt  test.cpp
